# zmij

./: .Rbuildignore  .gitignore  404.html  AGENTS.html  AGENTS.md  DESCRIPTION  LICENSE  LICENSE-text.html  LICENSE-text.md  LICENSE.html  LICENSE.md  LICENSE.note  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  index.html  index.md  llms.txt  pkgdown.yml  search.json  sitemap.xml
R/: extendr-wrappers.R  format-double.R  parse-double.R
inst/: COPYRIGHTS
man/: format_double.Rd  format_double_impl.Rd  parse_double.Rd  parse_double_impl.Rd
news/: index.html  index.md
reference/: format_double.html  format_double.md  format_double_impl.html  format_double_impl.md  index.html  index.md  parse_double.html  parse_double.md  parse_double_impl.html  parse_double_impl.md
src/: Makevars.in  Makevars.win.in  entrypoint.c  zmij-win.def
src/rust/: Cargo.toml  document.rs  vendor.tar.xz
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: test-format-double.R
