[package]
name = 'zmij'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.71'

[lib]
crate-type = ['rlib', 'staticlib']
name = 'zmij'

[[bin]]
name = 'document'
path = 'document.rs'

[dependencies]
extendr-api = '0.9.0'
zmij-rs = { package = 'zmij', version = '=1.0.23' }

[profile.release]
lto = true
codegen-units = 1
